--- a/src/app/component/template/nav/nav.component.html
+++ b/src/app/component/template/nav/nav.component.html
@@ -6,7 +6,7 @@
             </a>
         </mat-nav-list>
         <mat-nav-list>
-            <a mat-list-item>
+            <a routerLink="/categorias" mat-list-item>
                 <i class="material-icons">menu_book</i>Categorias
             </a>
         </mat-nav-list>
