--- a/src/app/component/views/categoria/categoria-read/categoria-read.component.css
+++ b/src/app/component/views/categoria/categoria-read/categoria-read.component.css
@@ -3,6 +3,10 @@
     margin: 1.4rem auto auto auto; 
 }
 
+button {
+    margin-bottom: .8rem;
+}
+
 .title {
     text-align: center;
     margin-bottom: 3rem;
@@ -16,4 +20,18 @@
 
 .table {
     width: 100%;
+}
+.edit {
+    color:rgb(18, 131, 97)
+}
+.delete {
+    color: rgb(241, 52, 52);
+    margin-left:.5rem;
+}
+.mat-header {
+    width: 5rem;
+}
+.livros {
+   margin-left: .6rem; 
+   color: rgb(18, 131, 97);
 }
