--- a/src/app/component/views/categoria/categoria-read/categoria-read.component.html
+++ b/src/app/component/views/categoria/categoria-read/categoria-read.component.html
@@ -2,9 +2,10 @@
     <div class="title">
         <h1>Categorias</h1>
     </div>
+    <button class="mat-elevation-z8" mat-stroked-button color="primary">CRIAR</button>
     <div class="content-table mat-elevation-z8">
         <!--[dataSource]="dataSource"-->
-        <table mat-table class="table">
+        <table mat-table class="table" [dataSource]="categorias">
     
             <!--- Note that these columns can be defined in any order.
                   The actual rendered columns are set as a property on the row definition" -->
@@ -27,10 +28,27 @@
               <td mat-cell *matCellDef="let row"> {{row.descricao}} </td>
             </ng-container>
           
+            <!-- Weight Column -->
+            <ng-container matColumnDef="livros">
+              <th mat-header-cell *matHeaderCellDef> LIVROS </th>
+              <td mat-cell *matCellDef="let row"> {{row.livros}} 
+                <a href="#" class="livros">
+                  <i class="material-icons">book</i>
+                </a>
+              </td>
+            </ng-container>
+
             <!-- Symbol Column -->
             <ng-container matColumnDef="acoes">
-              <th mat-header-cell *matHeaderCellDef> AÇÕES </th>
-              <td mat-cell *matCellDef="let row"> {{row.acoes}} </td>
+              <th class="mat-header" mat-header-cell *matHeaderCellDef> AÇÕES </th>
+              <td mat-cell *matCellDef="let row"> {{row.acoes}} 
+                <a class="edit" href="#">
+                  <i class="material-icons">edit</i>
+                </a>
+                <a class="delete" href="#">
+                  <i class="material-icons">delete</i>
+                </a>
+              </td>
             </ng-container>
           
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
