Created a new screen to save user data to categoria service.

--- a/src/app/component/views/categoria/categoria-read/categoria-read.component.html
+++ b/src/app/component/views/categoria/categoria-read/categoria-read.component.html
@@ -2,7 +2,7 @@
     <div class="title">
         <h1>Categorias</h1>
     </div>
-    <button class="mat-elevation-z8" mat-stroked-button color="primary">CRIAR</button>
+    <button class="mat-elevation-z8" (click)="categoriaCreate()" mat-stroked-button color="primary">CRIAR</button>
     <div class="content-table mat-elevation-z8">
         <!--[dataSource]="dataSource"-->
         <table mat-table class="table" [dataSource]="categorias">
