Build a new screen to delete categorias from database. Created a new method in the service.ts to delete data from database.

--- a/src/app/component/views/categoria/categoria-create/categoria-create.component.html
+++ b/src/app/component/views/categoria/categoria-create/categoria-create.component.html
@@ -10,6 +10,6 @@
     </mat-form-field>    
     <div class="buttons">
         <button class="mat-elevation-z8" (click)="create()" mat-stroked-button color="primary">CRIAR</button>
-        <button class="mat-elevation-z8" mat-stroked-button color="warn">CANCELAR</button>
+        <button class="mat-elevation-z8" (click)="cancel()" mat-stroked-button color="warn">CANCELAR</button>
     </div>
 </form>
