--- a/src/app/component/views/livro/livro-read-all/livro-read-all.component.html
+++ b/src/app/component/views/livro/livro-read-all/livro-read-all.component.html
@@ -1,11 +1,11 @@
 <div class="content">
     <div class="title">
-        <h1>Categorias</h1>
+        <h1>Livros</h1>
     </div>
-    <button class="mat-elevation-z8" (click)="categoriaCreate()" mat-stroked-button color="primary">CRIAR</button>
+    <button class="mat-elevation-z8" (click)="createLivro()" mat-stroked-button color="primary">NOVO</button>
     <div class="content-table mat-elevation-z8">
         <!--[dataSource]="dataSource"-->
-        <table mat-table class="table" [dataSource]="categorias">
+        <table mat-table class="table" >
     
             <!--- Note that these columns can be defined in any order.
                   The actual rendered columns are set as a property on the row definition" -->
@@ -17,22 +17,16 @@
             </ng-container>
           
             <!-- Name Column -->
-            <ng-container matColumnDef="nome">
-              <th mat-header-cell *matHeaderCellDef> NOME </th>
-              <td mat-cell *matCellDef="let row"> {{row.nome}} </td>
-            </ng-container>
-          
-            <!-- Weight Column -->
-            <ng-container matColumnDef="descricao">
-              <th mat-header-cell *matHeaderCellDef> DESCRICÃO </th>
-              <td mat-cell *matCellDef="let row"> {{row.descricao}} </td>
+            <ng-container matColumnDef="titulo">
+              <th mat-header-cell *matHeaderCellDef> TITULO </th>
+              <td mat-cell *matCellDef="let row"> {{row.titulo}} </td>
             </ng-container>
           
             <!-- Weight Column -->
             <ng-container matColumnDef="livros">
               <th mat-header-cell *matHeaderCellDef> LIVROS </th>
-              <td mat-cell *matCellDef="let row"> {{row.livros}} 
-                <a routerLink="{{ row.id }}/livros" class="livros">
+              <td mat-cell *matCellDef="let row">  
+                <a class="livros">
                   <i class="material-icons">book</i>
                 </a>
               </td>
@@ -42,10 +36,10 @@
             <ng-container matColumnDef="acoes">
               <th class="mat-header" mat-header-cell *matHeaderCellDef> AÇÕES </th>
               <td mat-cell *matCellDef="let row"> {{row.acoes}} 
-                <a class="edit" routerLink="update/{{ row.id }}">
+                <a class="edit" href="#">
                   <i class="material-icons">edit</i>
                 </a>
-                <a class="delete" routerLink="delete/{{row.id}}">
+                <a class="delete" href="#">
                   <i class="material-icons">delete</i>
                 </a>
               </td>
