--- a/src/app/component/views/livro/livro-create/livro-create.component.html
+++ b/src/app/component/views/livro/livro-create/livro-create.component.html
@@ -2,19 +2,22 @@
     <h1>Novo Livro</h1>
     <mat-form-field class="form">
         <mat-label>Titulo</mat-label>
-        <input matInput type="text" name="titulo" placeholder="Ex. Tecnologia Moderna" maxlength="100">
+        <input matInput [(ngModel)]="livro.titulo" [formControl]="titulo" required type="text" name="titulo" placeholder="Ex. Tecnologia Moderna" maxlength="100">
+        <mat-error *ngIf="titulo.invalid">{{ getMessage() }}</mat-error>
     </mat-form-field>
     <mat-form-field class="form">
         <mat-label>Nome Autor</mat-label>
-        <input matInput type="text" name="autor" placeholder="Ex. ciência" maxlength="100">
+        <input matInput [(ngModel)]="livro.nome_autor" [formControl]="autor" required type="text" name="autor" placeholder="Ex. ciência" maxlength="100">
+        <mat-error *ngIf="autor.invalid">{{ getMessage() }}</mat-error>
     </mat-form-field>  
     <mat-form-field class="form">
         <mat-label>Texto</mat-label>
-        <textarea matInput type="text" name="texto" placeholder="Ex. ciência" maxlength="2000000"></textarea>
+        <textarea matInput [(ngModel)]="livro.texto" [formControl]="texto" required type="text" name="texto" placeholder="Ex. ciência" maxlength="2000000"></textarea>
+        <mat-error *ngIf="texto.invalid">{{ getMessage() }}</mat-error>
     </mat-form-field>  
 
     <div class="buttons">
-        <button class="mat-elevation-z8" mat-stroked-button color="primary">CRIAR</button>
+        <button [disabled]="getMessage()" (click)="create()" class="mat-elevation-z8" mat-stroked-button color="primary">CRIAR</button>
         <button class="mat-elevation-z8" mat-stroked-button color="warn">CANCELAR</button>
     </div>
 </form>
