--- a/src/app/component/views/livro/livro-read-all/livro-read-all.component.html
+++ b/src/app/component/views/livro/livro-read-all/livro-read-all.component.html
@@ -36,7 +36,7 @@
             <ng-container matColumnDef="acoes">
               <th class="mat-header" mat-header-cell *matHeaderCellDef> AÇÕES </th>
               <td mat-cell *matCellDef="let row"> {{row.acoes}} 
-                <a class="edit" href="#">
+                <a class="edit" routerLink="{{ row.id }}/update">
                   <i class="material-icons">edit</i>
                 </a>
                 <a class="delete" href="#">
