--- a/src/app/component/views/livro/livro-read-all/livro-read-all.component.html
+++ b/src/app/component/views/livro/livro-read-all/livro-read-all.component.html
@@ -26,7 +26,7 @@
             <ng-container matColumnDef="livros">
               <th mat-header-cell *matHeaderCellDef> LIVROS </th>
               <td mat-cell *matCellDef="let row">  
-                <a class="livros">
+                <a class="livros" routerLink="{{ row.id }}/read">
                   <i class="material-icons">book</i>
                 </a>
               </td>
